--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["raufer <raufer92@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 pyspark = "^3.0.1"
+pytest = "^6.1.2"
 
 [tool.poetry.dev-dependencies]
 
