--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["raufer <raufer92@gmail.com>"]
 python = "^3.7"
 pyspark = "^3.0.1"
 pytest = "^6.1.2"
+networkx = "^2.5"
 
 [tool.poetry.dev-dependencies]
 
